--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                                     Community
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="events.html">
+                                    <i class="fa fa-calendar"></i>
+                                    Calendar
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
