--- a/events.html
+++ b/events.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html lang="en">
     <head>
 
-        <meta charset="utf-8 ">
-        <meta http-equiv="X-UA-Compatible " content="IE=edge ">
-        <meta name="viewport " content="width=device-width, initial-scale=1 ">
-        <meta name="description " content="Cloud Custodian ">
-        <meta name="author " content="Capital One ">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Cloud Custodian events calendar">
+        <meta name="author" content="The Cloud Custodian Authors">
 
         <title>Cloud Custodian</title>
 
         <!-- Bootstrap Core CSS -->
-        <link href="css/bootstrap.min.css " rel="stylesheet ">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="css/landing-page.css " rel="stylesheet ">
+        <link href="css/landing-page.css" rel="stylesheet">
 
         <!-- Custom Glyphs and Fonts -->
         <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
