--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
                 </nav>
             </header>
 
-            <main role="main" style="padding-top: 5em">
+            <main style="padding-top: 5em">
         
                 <section>
                     <iframe
