--- a/events.html
+++ b/events.html
@@ -76,8 +76,8 @@
                 <section>
                     <iframe
                     src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDetroit&src=Y19naDhzc2pia3JvaWVxcWFzN2trbWgzdG9yc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23616161&title=Cloud%20Custodian"
-                    style="border:solid 1px #777" width="800" height="600"
-                    frameborder="0" scrolling="no" display:block></iframe>
+                    style="border:solid 1px #777;  display:block;" width="800" height="600"
+                    scrolling="no"></iframe>
                 </section>
             <section>
                 <strong>Contact jorge@stacklet.io if you'd like to add a Cloud Custodian
