--- a/events/index.html
+++ b/events/index.html
@@ -61,7 +61,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="events.html">
+                                <a class="nav-link" href="events/index.html">
                                     <i class="fa fa-calendar"></i>
                                     Calendar
                                 </a>
