Change to static paths for js/css, enable events/ URL

--- a/events/index.html
+++ b/events/index.html
@@ -10,10 +10,10 @@
         <title>Cloud Custodian</title>
 
         <!-- Bootstrap Core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="css/landing-page.css" rel="stylesheet">
+        <link href="/css/landing-page.css" rel="stylesheet">
 
         <!-- Custom Glyphs and Fonts -->
         <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
         <!-- Navigation -->
             <header>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-                    <a class="navbar-brand" href="index.html#">
+                    <a class="navbar-brand" href="/">
                         <img src="/img/cloud-custodian.svg" width="30" height="30" class="d-inline-block align-top" alt="Cloud Custodian logo">
                         Cloud Custodian
                     </a>
@@ -88,7 +88,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
             <!-- Bootstrap Core JavaScript -->
-            <script src="js/bootstrap.min.js "></script>
+            <script src="/js/bootstrap.min.js "></script>
 
 <!-- Google Analytics -->
 <script>
