Update website banner for reinvent

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-<p>Join us for <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/">Kubecon US 2022</a> in
-  Detroit, MI at Booth S89 and Room 410 Friday, October 28th.</p>
+<p>Join us for our reception at AWS re:Invent, <a href="https://stacklet.io/c7n-awsreinvent-2022">reserve your spot now</a>, and join us at Booth #2517!</p>
 {% endblock %}
